Update all dependencies
- Add namespace.
- Configure java version.
- Update Gradle.